[B]Version 1.1.149[/B]
- foxnxx - fix playback