@@ -1,2 +1,4 @@
 [B]Version 1.1.149[/B]
 - foxnxx - fix playback
+- spankbang - fix listing
+
